# IGVC_actor_detector

./: CMakeLists.txt  README.md  package.xml
cfg/: detection_reporter.cfg
config/: arucos.xml  object_detector_defaults.yaml  saved_pose_classifier.h5  saved_pose_classifier_old.h5
launch/: lite_detector.launch
msg/: BoundingBox.msg  Detection.msg  Detections.msg  Lidar_Point.msg  Lidar_Points.msg
scripts/: detection_reporter_igvc_node.py  object_detector_lite_node.py  stopsign_reporter_igvc_node.py
src/: detection_image_viewer_node.cpp  detection_reporter_node.cpp
